2009-04-15 (0.9.0.2alpha)
	 - Added log base 2 support to the scale/ruler libraries
	    - In gtkdatabox.c I Copied log10 code and pasted, it 
	      after the linear code replacing log10 calls with log2
	    - In gtkdatabox_grid.c, added in support for assigning grid 
	      values, instead of the default automatic assign done heuristically 
	      by the library.
	      - Uses a new API GtkDataboxGraph *gtk_databox_grid_array_new
		(gint hlines, gint vlines, gfloat *hline_vals, gfloat *vline_vals, GdkColor * color, guint size);
	      - These are not done using the same coding style priv->val 
	        because I could not figure out how to make this work properly.
		Instead I used a global gfloat pointer defaulted to NULL for
		these arrays.  The NULL value is used to determine if grid
		values are displayed from the array or heuristically
	    - In gtkdatabox_scale, copied log10 code and pasted, it after the linear 
	      code replacing log10 calls with log2
	    - Updated all headers to reflect new API change (see diff)
	    -Added documentation for the new function
	    -Added example for grid_array, added example for log2 in the
	    logarithmic examples
2008-05-13 (0.9.0.0)
        - Added reference documentation via GtkDoc! Finally :-)
	- Interface changes, inspired by the documentation:
	   - removed gtk_databox_redraw(). Please use gtk_widget_queue_draw()
	   - gtk_databox_graph_add(), gtk_databox_graph_remove(),
	     gtk_databox_graph_remove_all() now return gint instead 
	     of gboolean or void (0 == success).
	   - Renamed signals (removed the "databox_" prefix and changed
	     cancelled (British) to canceled (US) and harmonized:
	     zoomed, selection_started, selection-changed, selection-finalized,
	     selection-canceled.
	   - Harmonized all horizontal/vertical things to x/y:
	     gtk_databox_set_hadjustment() => gtk_databox_set_adjustment_x()
	     gtk_databox_set_vadjustment() => gtk_databox_set_adjustment_y()