@@ -4,3 +4,7 @@ Original Author:
 Dr. Roland Bock, who can be contacted at rbock at eudoxos de, unless
 this account is flooded with spam. In that case, the current address is 
 to be found on my web site: www.eudoxos.de.
+
+Project Maintainer as of 04/15/2009:
+------------------------------------
+Brian R Phelps aka electronjunkie can be contacted at lm317t dot gmail.com
