@@ -1506,8 +1506,7 @@ a selection rectangle.</p>
 <p>
 
 </p>
-
-@:<div class="variablelist"><table border="0">
+<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -1535,9 +1534,7 @@ is set). The corners of the selection rectangle are stored in <em class="paramet
 <p>
 
 </p>
-
-@: 
-@:<div class="variablelist"><table border="0">
+<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -1572,9 +1569,7 @@ is released after a selection was started before.
 <p>
 
 </p>
-
-@: 
-@:<div class="variablelist"><table border="0">
+<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -1610,9 +1605,7 @@ is set). The corners of the selection rectangle are stored in <em class="paramet
 <p>
 
 </p>
-
-@: 
-@:<div class="variablelist"><table border="0">
+<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -1643,8 +1636,7 @@ This signal is emitted each time the zoom of the widget is changed, see for exam
 <p>
 
 </p>
-
-@:<div class="variablelist"><table border="0">
+<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
