@@ -22,7 +22,7 @@
 </tr></table>
 <div class="chapter" lang="en">
 <div class="titlepage"><div><div><h2 class="title">
-<a name="id345393"></a>GtkDatabox</h2></div></div></div>
+<a name="id293374"></a>GtkDatabox</h2></div></div></div>
 <div class="toc"><dl>
 <dt>
 <span class="refentrytitle"><a href="GtkDatabox.html">GtkDatabox</a></span><span class="refpurpose"> — A GTK+ widget to display large amounts of numerical data quickly and easily.</span>
