@@ -250,7 +250,8 @@ a selection rectangle.</p>
 <p>
 
 </p>
-<div class="variablelist"><table border="0">
+
+@:<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -278,7 +279,9 @@ is set). The corners of the selection rectangle are stored in <em class="paramet
 <p>
 
 </p>
-<div class="variablelist"><table border="0">
+
+@: 
+@:<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -313,7 +316,9 @@ is released after a selection was started before.
 <p>
 
 </p>
-<div class="variablelist"><table border="0">
+
+@: 
+@:<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -349,7 +354,9 @@ is set). The corners of the selection rectangle are stored in <em class="paramet
 <p>
 
 </p>
-<div class="variablelist"><table border="0">
+
+@: 
+@:<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
@@ -380,7 +387,8 @@ This signal is emitted each time the zoom of the widget is changed, see for exam
 <p>
 
 </p>
-<div class="variablelist"><table border="0">
+
+@:<div class="variablelist"><table border="0">
 <col align="left" valign="top">
 <tbody>
 <tr>
