@@ -34,17 +34,12 @@ GtkDatabox
 
 </para>
 
-@:
-
 @databox: the object which received the signal.
 
 <!-- ##### SIGNAL GtkDatabox::selection-changed ##### -->
 <para>
 
 </para>
-
-@: 
-@:
 
 @databox: the object which received the signal.
 @arg1: 
@@ -54,9 +49,6 @@ GtkDatabox
 
 </para>
 
-@: 
-@:
-
 @databox: the object which received the signal.
 @arg1: 
 
@@ -65,9 +57,6 @@ GtkDatabox
 
 </para>
 
-@: 
-@:
-
 @databox: the object which received the signal.
 @arg1: 
 
@@ -75,8 +64,6 @@ GtkDatabox
 <para>
 
 </para>
-
-@:
 
 @databox: the object which received the signal.
 
