@@ -34,12 +34,17 @@ GtkDatabox
 
 </para>
 
+@:
+
 @databox: the object which received the signal.
 
 <!-- ##### SIGNAL GtkDatabox::selection-changed ##### -->
 <para>
 
 </para>
+
+@: 
+@:
 
 @databox: the object which received the signal.
 @arg1: 
@@ -49,6 +54,9 @@ GtkDatabox
 
 </para>
 
+@: 
+@:
+
 @databox: the object which received the signal.
 @arg1: 
 
@@ -57,6 +65,9 @@ GtkDatabox
 
 </para>
 
+@: 
+@:
+
 @databox: the object which received the signal.
 @arg1: 
 
@@ -64,6 +75,8 @@ GtkDatabox
 <para>
 
 </para>
+
+@:
 
 @databox: the object which received the signal.
 
