@@ -182,7 +182,9 @@ This signal is emitted after a right click outside
 a selection rectangle.</para>
 <para>
 
-</para><variablelist role="params">
+</para>
+
+@:<variablelist role="params">
 <varlistentry><term><parameter>box</parameter>&nbsp;:</term>
 <listitem><simpara> The <link linkend="GtkDatabox"><type>GtkDatabox</type></link> widget which zoomed in or out.
 </simpara></listitem></varlistentry>
@@ -198,7 +200,10 @@ with the left button pressed (and the <link linkend="GtkDatabox--enable-selectio
 is set). The corners of the selection rectangle are stored in <parameter>selection_values</parameter>.</para>
 <para>
 
-</para><variablelist role="params">
+</para>
+
+@: 
+@:<variablelist role="params">
 <varlistentry><term><parameter>box</parameter>&nbsp;:</term>
 <listitem><simpara> The <link linkend="GtkDatabox"><type>GtkDatabox</type></link> widget in which the selection was changed.
 </simpara></listitem></varlistentry>
@@ -219,7 +224,10 @@ is released after a selection was started before.
 <parameter>see_also</parameter>: <link linkend="GtkDatabox-selection-changed"><type>"selection-changed"</type></link></para>
 <para>
 
-</para><variablelist role="params">
+</para>
+
+@: 
+@:<variablelist role="params">
 <varlistentry><term><parameter>box</parameter>&nbsp;:</term>
 <listitem><simpara> The <link linkend="GtkDatabox"><type>GtkDatabox</type></link> widget in which the selection has been stopped.
 </simpara></listitem></varlistentry>
@@ -241,7 +249,10 @@ is set). The corners of the selection rectangle are stored in <parameter>selecti
 <parameter>see_also</parameter>: <link linkend="GtkDatabox-selection-changed"><type>"selection-changed"</type></link></para>
 <para>
 
-</para><variablelist role="params">
+</para>
+
+@: 
+@:<variablelist role="params">
 <varlistentry><term><parameter>box</parameter>&nbsp;:</term>
 <listitem><simpara> The <link linkend="GtkDatabox"><type>GtkDatabox</type></link> widget in which the selection has been started.
 </simpara></listitem></varlistentry>
@@ -258,7 +269,9 @@ This signal is emitted each time the zoom of the widget is changed, see for exam
 <link linkend="gtk-databox-zoom-to-selection"><function>gtk_databox_zoom_to_selection()</function></link>, <link linkend="gtk-databox-set-visible-limits"><function>gtk_databox_set_visible_limits()</function></link>.</para>
 <para>
 
-</para><variablelist role="params">
+</para>
+
+@:<variablelist role="params">
 <varlistentry><term><parameter>box</parameter>&nbsp;:</term>
 <listitem><simpara> The <link linkend="GtkDatabox"><type>GtkDatabox</type></link> widget which zoomed in or out.
 </simpara></listitem></varlistentry>
